# ha-knmi

./: .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  .yamllint  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  info.md  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  sonar-project.properties
.devcontainer/: README.md  configuration.yaml  devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  release-drafter.yaml  renovate.json
.github/ISSUE_TEMPLATE/: bug.yaml  config.yaml  config.yml  feature_request.md  feature_request.yaml  issue.md  issue.yaml
.github/workflows/: api-issue-comment.yaml  ci.yaml  ci.yml  codeql.yaml  license.yaml  pr.yaml  pull.yml  push.yml  release-drafter.yaml  release.yaml  stale.yaml  validate.yaml
config/: README.md  configuration.yaml
custom_components/knmi/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  icons.json  manifest.json  sensor.py  weather.py
custom_components/knmi/translations/: en.json  nl.json
scripts/: develop  develop.sh  local_ci_checks.sh  release  setup  setup_env.sh  update  utils.sh
tests/: README.md  __init__.py  conftest.py  const.py  test_api.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_manifest.py  test_metadata.py  test_sensor.py  test_version.py  test_weather.py
tests/__snapshots__/: test_diagnostics.ambr
tests/fixtures/: _.json  clear_night_fix.json  cold_snow.json  response.json  response_alarm.json  warm_snow.json
